--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
       />
       <button type="submit">Search</button>
     </form>
-    <ul class="gallery js-cards-container">
+    <div class="gallery js-cards-container">
       <!-- Image cards -->
-    </ul>
+    </div>
 
     <button type="button" class="load-more">Load more</button>
 
